Margin of hero fixed for small screen

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       <!-- winning-score cell -->
       
-          <input type="text" name="Winning Score" placeholder="Set Winning Score Here!" class="form-control" id="form-control">
+          <input type="text" name="Winning Score" placeholder="Set Winning Score!" class="form-control" id="form-control">
 
 
     </div>
